Fixing z-index

--- a/static/css/chat.css
+++ b/static/css/chat.css
@@ -14,6 +14,7 @@ body > div,
     height: 100%;
     justify-content: center;
     width: 100%;
+    z-index: 9999 !important;
 }
 
 @media (min-width: 600px) {
@@ -26,7 +27,7 @@ body > div,
 .wrapper {
     display: flex;
     flex-direction: column;
-    z-index: 50;
+    z-index: 9999 !important;
 }
 
 .chat {
